<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!-- message content -->
    <string name="no_option_selected_toast">Select one of the options to start download</string>

    <!-- Notification strings -->
    <string name="channel_id">Downloads</string>
    <string name="channel_name">Downloads</string>
    <string name="action_text">Show details</string>

    <!-- download status messages -->
    <string name="download_success">Success</string>
    <string name="download_failed">Failed</string>

    <string name="download_btn_text">Download</string>
    <string name="progress_text">We\'re loading</string>

    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
</resources>
