<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.udacity.model.DownloadUrls"/>

        <variable
            name="viewModel"
            type="com.udacity.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".main.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/main_content_iv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cloud_download_24"
            app:tint="@color/purple" />

        <RadioGroup
            android:id="@+id/main_content_radioBtn_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_content_iv">

            <RadioButton
                android:id="@+id/glide_radioBtn"
                style="@style/MainContent_textAppearance"
                android:onClick="@{() -> viewModel.selectedUrl(DownloadUrls.GLIDE)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/glide_text" />

            <RadioButton
                android:id="@+id/udacity_radioBtn"
                style="@style/MainContent_textAppearance"
                android:onClick="@{() -> viewModel.selectedUrl(DownloadUrls.UDACITY)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/udacity_text" />

            <RadioButton
                android:id="@+id/retrofit_radioBtn"
                style="@style/MainContent_textAppearance"
                android:onClick="@{() -> viewModel.selectedUrl(DownloadUrls.RETROFIT)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/retrofit_text" />

        </RadioGroup>

        <com.udacity.customButton.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/margin_large"
            android:onClickListener="@{()-> viewModel.onDownloadButtonClick()}"
            android:text="@string/download_btn_text"
            android:textSize="@dimen/default_text_size"
            app:defaultAnimationDuration="2000"
            app:defaultColor="@color/colorPrimary"
            app:pacmanProgressColor="@color/colorAccent"
            app:progressColor="@color/colorPrimaryDark"
            app:progressText="@string/progress_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
